service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-challenge-service
spec:
  selector:
    app: k8s-challenge
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
