ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-challenge-ingress
spec:
  rules:
  - host: minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: k8s-challenge-service
          servicePort: 80
